Shuffled some unit tests.